# PluralsightPythonKata

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Python3Fundamentals.md  Python_CI_CD.md  Python_UnitTests.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
core_python/: __init__.py  initFileExample.py
core_python/1.BigPicture/: PythonTheBigPiciture.md
core_python/2_fundamental/: __init__.py  employee.py  listAndLoops.py  output.txt  readFile.py  writeFile.py
core_python/Fundamental_2/: classesAndObjects.py  company.py  conditionalsAndImports.py  dataTypes.py  dicJsonAndPip.py  exception.py  fileUtils.py  file_demo.py  functions.py  input.txt
core_python/classesAndOOD_3/: ClassesAndOOD.md  __init__.py
core_python/collections_4/: collections.md  dictionaryKata.py  listKata.py  tuplesKata.py
core_python/project1/: __init__.py  file1.py  greeter.py
core_python/project2/: calculator.py  file2.py
core_python/project3/: __init__.py  echoer.py  file3.py
tests/: conftest.py  test_fundamentals_2.py  test_project1.py  test_project2.py  test_project3.py
