[tool.poetry]
name = "core-python"
version = "0.1.0"
description = "Core Python multi-package project with project1, project2, project3"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [ { include = "core_python" } ]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.0"
black = "^24.3"
isort = "^6.0"
pre-commit = "^3.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
